--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "server": "cd server && npm start",
     "dev-server": "cd server && npm run dev",
     "dev": "concurrently \"npm run dev-server\" \"npm start\"",
-    "dev:all": "concurrently -n \"SERVER,CLIENT\" -c \"blue,green\" \"npm run dev-server\" \"npm start\""
+    "dev:all": "concurrently -n \"SERVER,CLIENT\" -c \"blue,green\" \"npm run dev-server\" \"npm start\"",
+    "serve": "serve -s build -l $PORT"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "concurrently": "^9.2.1",
+    "serve": "^14.2.0"
   }
 }
