--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.0.1",
+    "react-is": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
